# myapp

./: .gitignore  CONTROL_SYSTEM.md  README.md  SETUP_GUIDE.md  latest-version.txt  main.py  pyproject.toml
.github/workflows/: release.yml
extension_data/: README.md
hemjjmkicbemgpifgbohhdhgjgebmkak/: background.js  manifest.json
myapp/: __init__.py  app.py  cli.py  config.py  daemon.py  updater.py  version_utils.py
scripts/: build-deb.sh  release.sh  setup-apt-repo.sh
tests/: test_updater.py  test_version_utils.py
